配信結果のページングにpage_countを設定

--- a/Resource/template/admin/history_result.twig
+++ b/Resource/template/admin/history_result.twig
@@ -84,15 +84,15 @@
                 <div class="text-center">
                     <ul class="pagination">
                         {% if pagination.paginationData.previous is defined %}
-                            <li class="pagenation__item-previous"><a href="{{ path('plugin_mail_magazine_history_result', { 'id': historyId }|merge({'page_no': pagination.paginationData.previous})) }}" aria-label="Previous"><span aria-hidden="true">前へ</span></a></li>
+                            <li class="pagenation__item-previous"><a href="{{ path('plugin_mail_magazine_history_result', { 'id': historyId, 'page_count': page_count }|merge({'page_no': pagination.paginationData.previous})) }}" aria-label="Previous"><span aria-hidden="true">前へ</span></a></li>
                         {% endif %}
 
                         {% for page in pagination.paginationData.pagesInRange %}
-                            <li{% if page == pagination.paginationData.current %} class="pagenation__item active"{% endif %}><a href="{{ path('plugin_mail_magazine_history_result', { 'id': historyId }|merge({'page_no': page})) }}"><span>{{ page }}</span></a></li>
+                            <li{% if page == pagination.paginationData.current %} class="pagenation__item active"{% endif %}><a href="{{ path('plugin_mail_magazine_history_result', { 'id': historyId, 'page_count': page_count }|merge({'page_no': page})) }}"><span>{{ page }}</span></a></li>
                         {% endfor %}
 
                         {% if pagination.paginationData.next is defined %}
-                            <li class="pagenation__item-next"><a href="{{ path('plugin_mail_magazine_history_result', { 'id': historyId }|merge({'page_no': pagination.paginationData.next})) }}" aria-label="Next"><span aria-hidden="true">次へ</span></a></li>
+                            <li class="pagenation__item-next"><a href="{{ path('plugin_mail_magazine_history_result', { 'id': historyId, 'page_count': page_count }|merge({'page_no': pagination.paginationData.next})) }}" aria-label="Next"><span aria-hidden="true">次へ</span></a></li>
                         {% endif %}
                     </ul>
                 </div>
