--- a/Resource/template/admin/template_select.twig
+++ b/Resource/template/admin/template_select.twig
@@ -31,6 +31,9 @@
                 } else {
                     action= '{{ url('plugin_mail_magazine_select') }}';
                 }
+
+                $('#mode').val('select');
+                
                 document.form1.action = action;
                 document.form1.submit();
             });
@@ -47,6 +50,7 @@
 {% block main %}
     <form name="form1" role="form" class="form-horizontal" id="form1" method="post" action="">
     {{ form_widget(form._token) }}
+    <input id="mode" type="hidden" name="mode">
     <div class="row" id="aside_wrap">
         <div id="detail_wrap" class="col-md-9">
             <div class="box">
@@ -56,9 +60,9 @@
                 <div class="box-body">
 
                     {{ form_row(form.template) }}
-                    {{ form_row(form.subject, {'value' : new_subject}) }}
-                    {{ form_row(form.body, {'value' : new_body, 'attr' : { 'rows' : 20 }}) }}
-                    {{ form_row(form.htmlBody, {'value' : new_htmlBody, 'attr' : { 'rows' : 20 }}) }}
+                    {{ form_row(form.subject) }}
+                    {{ form_row(form.body, {'attr' : { 'rows' : 20 }}) }}
+                    {{ form_row(form.htmlBody, {'attr' : { 'rows' : 20 }}) }}
 
                     <div style="display: none">
                         {{ form_rest(form) }}
