Change new session rule as core

--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -287,7 +287,7 @@ function fnChangeActionSubmit(action) {
                     <div class="row btn_area">
                         <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 text-center">
                             <button class="btn btn-primary btn-block btn-lg" onclick="fnChangeActionSubmit('{{ url('plugin_mail_magazine_select') }}'); return false;">
-                                配信内容を作成する <svg class="cb cb-angle-right"><use xlink:href="#cb-angle-right"></svg>
+                                配信内容を作成する <svg class="cb cb-angle-right"><use xlink:href="#cb-angle-right"></use></svg>
                             </button>
                         </div>
                         <!-- /.col -->
