--- a/Resource/template/admin/template_select.twig
+++ b/Resource/template/admin/template_select.twig
@@ -12,14 +12,14 @@
 [メルマガ管理]-[配信内容設定]-[テンプレート選択]画面
 #}
 
-{% extends 'default_frame.twig' %}
+{% extends '@admin/styleguide_frame.twig' %}
 
-{% set menus = ['mailmagazine', 'mailmagazine'] %}
+{% set menus = ['customer', 'mailmagazine', 'mailmagazine'] %}
 
-{% block title %}メルマガ管理{% endblock %}
-{% block sub_title %}配信{% endblock %}
+{% block title %}{{ 'plugin.mailmagazine.index.title'|trans }}{% endblock %}
+{% block sub_title %}{{ 'plugin.mailmagazine.title'|trans }}{% endblock %}
 
-{% form_theme form 'Form/bootstrap_3_horizontal_layout.html.twig' %}
+{% form_theme form '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
 
 {% block javascript %}
     <script>
@@ -49,53 +49,107 @@
 
 {% block main %}
     <form name="form1" role="form" class="form-horizontal" id="form1" method="post" action="">
-    {{ form_widget(form._token) }}
-    <input id="mode" type="hidden" name="mode">
-    <div class="row" id="aside_wrap">
-        <div id="detail_wrap" class="col-md-9">
-            <div class="box">
-                <div class="box-header">
-                    <h3 class="box-title">配信内容の設定</h3>
-                </div><!-- /.box-header -->
-                <div class="box-body">
-
-                    {{ form_row(form.template) }}
-                    {{ form_row(form.subject) }}
-                    {{ form_row(form.body, {'attr' : { 'rows' : 20 }}) }}
-                    {{ form_row(form.htmlBody, {'attr' : { 'rows' : 20 }}) }}
-
-                    <div style="display: none">
-                        {{ form_rest(form) }}
+        {{ form_widget(form._token) }}
+        <input id="mode" type="hidden" name="mode">
+        <div class="c-outsideBlock">
+            <div class="c-outsideBlock__contents">
+                <div class="card rounded border-0 mb-4">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-8">
+                                <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
+                                    <span class="card-title">
+                                        {{ 'plugin.mailmagazine.select.card_title'|trans }}
+                                    </span>
+                                    <i class="fa fa-question-circle fa-lg ml-1"></i>
+                                </div>
+                            </div>
+                            <div class="col-4 text-right">
+                                <a data-toggle="collapse" href="#basicConfig" aria-expanded="false"
+                                   aria-controls="basicConfig">
+                                    <i class="fa fa-angle-up fa-lg"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <span class="help-block">※ 名前差し込み時は {name} といれてください</span>
-                </div><!-- /.box-body -->
-            </div><!-- /.box -->
-
-            <div id="detail_box__footer" class="row hidden-xs hidden-sm">
-                <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
-                    <p><a href="{{ url('plugin_mail_magazine') }}" onclick="changeAction('{{ url('plugin_mail_magazine') }}'); return false;">検索画面に戻る</a></p>
+                    <div class="card-body mb-lg-5">
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
+                                    <span>{{ form.template.vars.label|trans }}</span>
+                                    <i class="fa fa-question-circle fa-lg ml-1"></i>
+                                </div>
+                            </div>
+                            <div class="col mb-2">
+                                {{ form_widget(form.template) }}
+                                {{ form_errors(form.template) }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
+                                    <span>{{ form.subject.vars.label|trans }}</span>
+                                    <i class="fa fa-question-circle fa-lg ml-1"></i>
+                                </div>
+                            </div>
+                            <div class="col mb-2">
+                                {{ form_widget(form.subject) }}
+                                {{ form_errors(form.subject) }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
+                                    <span>{{ form.body.vars.label|trans }}</span>
+                                    <i class="fa fa-question-circle fa-lg ml-1"></i>
+                                </div>
+                            </div>
+                            <div class="col mb-2">
+                                {{ form_widget(form.body, {'attr' : { 'rows' : 20 }}) }}
+                                {{ form_errors(form.body) }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
+                                    <span>{{ form.htmlBody.vars.label|trans }}</span>
+                                    <i class="fa fa-question-circle fa-lg ml-1"></i>
+                                </div>
+                            </div>
+                            <div class="col mb-2">
+                                {{ form_widget(form.htmlBody, {'attr' : { 'rows' : 20 }}) }}
+                                {{ form_errors(form.htmlBody) }}
+                            </div>
+                        </div>
+                        <div style="display: none">
+                            {{ form_rest(form) }}
+                        </div>
+                        <span class="help-block">{{ 'plugin.mailmagazine.select.note_name'|trans }}</span>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="common_box" class="col-md-3">
-            {# 登録ボタン #}
-            <div class="col_inner" id="aside_column">
-                <div class="box no-header">
-                    <div class="box-body">
-                        <div class="row text-center">
-                            <div class="col-sm-6 col-sm-offset-3 col-md-12 col-md-offset-0">
-                                <button class="btn btn-primary btn-block btn-lg" onclick="changeAction('{{ url('plugin_mail_magazine_confirm') }}/' + document.form1.mail_magazine_template.value); return false;">確認画面へ</button>
+        <div class="c-conversionArea">
+            <div class="c-conversionArea__container">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-6">
+                        <div class="c-conversionArea__leftBlockItem">
+                            <a class="c-beseLink" href="{{ url('plugin_mail_magazine') }}" onclick="changeAction('{{ url('plugin_mail_magazine') }}'); return false;">
+                                <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'plugin.mailmagazine.select.btn_back'|trans }}</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="row align-items-center justify-content-end">
+                            <div class="col-auto">
+                                <button class="btn btn-ec-conversion px-5" type="submit" onclick="changeAction('{{ url('plugin_mail_magazine_confirm') }}/' + document.form1.mail_magazine_template.value); return false;">
+                                    {{ 'plugin.mailmagazine.select.btn_confirm'|trans }}
+                                </button>
                             </div>
                         </div>
-
-                    </div><!-- /.box-body -->
-                </div><!-- /.box -->
-            </div><!-- /.col -->
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
     </form>
-    
-
-
-
 {% endblock %}
