--- a/Resource/template/admin/template_select.twig
+++ b/Resource/template/admin/template_select.twig
@@ -50,7 +50,7 @@
 {% block main %}
     <form name="form1" role="form" class="form-horizontal" id="form1" method="post" action="">
         {{ form_widget(form._token) }}
-        <input id="mode" type="hidden" name="mode">
+        <input id="mode" type="hidden" name="mode" value="confirm">
         <div class="c-outsideBlock">
             <div class="c-outsideBlock__contents">
                 <div class="card rounded border-0 mb-4">
@@ -65,10 +65,6 @@
                                 </div>
                             </div>
                             <div class="col-4 text-right">
-                                <a data-toggle="collapse" href="#basicConfig" aria-expanded="false"
-                                   aria-controls="basicConfig">
-                                    <i class="fa fa-angle-up fa-lg"></i>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -142,7 +138,7 @@
                     <div class="col-6">
                         <div class="row align-items-center justify-content-end">
                             <div class="col-auto">
-                                <button class="btn btn-ec-conversion px-5" type="submit" onclick="changeAction('{{ url('plugin_mail_magazine_confirm') }}/' + document.form1.mail_magazine_template.value); return false;">
+                                <button class="btn btn-ec-conversion px-5" type="submit">
                                     {{ 'plugin.mailmagazine.select.btn_confirm'|trans }}
                                 </button>
                             </div>
