Migrate MailMagazineSendHistoryController::index to 3.n

--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -273,8 +273,8 @@ function fnChangeActionSubmit(action) {
                 <div class="col">
                     <div class="mb-3">
                         <label>{{ 'admin.customer.index.119'|trans }}</label>
-                        {#{{ form_widget(searchForm.tel) }}#}
-                        {#{{ form_errors(searchForm.tel) }}#}
+                        {{ form_widget(searchForm.tel) }}
+                        {{ form_errors(searchForm.tel) }}
                     </div>
                 </div>
                 <div class="col">
